Adds support for default first broker login flow on realm level